--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyMvpSample</string>
+    <string name="app_name">Login</string>
     <string name="action_settings">Settings</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
